--- a/app/src/main/res/layout/rv_pokemon.xml
+++ b/app/src/main/res/layout/rv_pokemon.xml
@@ -2,16 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
-        app:cardCornerRadius="13dp"
+        android:layout_margin="4dp"
+        app:cardCornerRadius="3dp"
         app:cardPreventCornerOverlap="false"
-        app:contentPadding="5dp">
+        app:contentPadding="7dp"
+        app:cardBackgroundColor="@color/rv_background_color"
+        >
 
         <ImageView
             android:id="@+id/iv_pokemon"
@@ -24,7 +27,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:textAllCaps="true" />
+            android:textStyle="bold"
+            android:textAllCaps="true"
+            android:textSize="16sp"
+
+            />
 
     </android.support.v7.widget.CardView>
 
