--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#f44334</color>
+    <color name="colorPrimaryDark">#b90008</color>
+    <color name="colorAccent">#ff795e</color>
 
-    <color name="mainActivityBackgroundColor">#aba2a2</color>
+
+    <color name="mainActivityBackgroundColor">#333333</color>
+    <color name="rv_background_color">#ffffff</color>
+    <color name="thumbColor">#f44334</color>
+
+<!--
+    <color name="mainActivityBackgroundColor">#ffcdd2</color>
+
+    <color name="rv_background_color">#ffebee</color>
+    <color name="thumbColor">#f44334</color>
+-->
+
 </resources>
