Récupération de l'id par le fragment pokemon

--- a/app/src/main/res/layout/fragment_pokemon_infos.xml
+++ b/app/src/main/res/layout/fragment_pokemon_infos.xml
@@ -76,8 +76,6 @@
             app:layout_constraintTop_toBottomOf="@id/artwork"
             tools:layout_editor_absoluteX="0dp" />
 
-        <!--*************************************************************************************-->
-        <!--*************************************************************************************-->
         <android.support.constraint.ConstraintLayout
             android:id="@+id/constraint"
             android:layout_width="match_parent"
@@ -269,7 +267,7 @@
                 android:max="255"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+d/guideline"
+                app:layout_constraintStart_toStartOf="@id/guideline"
                 app:layout_constraintTop_toTopOf="@id/speed" />
         </android.support.constraint.ConstraintLayout>
 
