--- a/app/src/main/res/layout/fragment_pokemon_infos.xml
+++ b/app/src/main/res/layout/fragment_pokemon_infos.xml
@@ -21,6 +21,7 @@
 
         <ImageView
             android:id="@+id/artwork"
+            android:transitionName="pokemon"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:padding="8dp"
