animation marche mais seulement dans le sens inverse

--- a/app/src/main/res/layout/fragment_pokemon_infos.xml
+++ b/app/src/main/res/layout/fragment_pokemon_infos.xml
@@ -21,7 +21,7 @@
 
         <ImageView
             android:id="@+id/artwork"
-            android:transitionName="pokemon"
+            android:transitionName="pokemonTransition"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:padding="8dp"
