--- a/app/src/main/res/layout/rv_pokemon.xml
+++ b/app/src/main/res/layout/rv_pokemon.xml
@@ -9,7 +9,7 @@
         android:id="@+id/cardview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="4dp"
+        android:layout_marginTop="4dp"
         app:cardCornerRadius="3dp"
         app:cardPreventCornerOverlap="false"
         app:contentPadding="7dp"
